--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -39,14 +39,19 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
-          ls -la
           cat package.json
 
       - name: Build for Linux
         if: matrix.os == 'ubuntu-latest'
         run: |
+          # tar
+          echo "$(date +'%Y-%m-%dT%H:%M:%S%z')" > version.txt
           cd dist && tar -czvf ../vps_jsq.tar.gz * && cd ..
           cp vps_jsq.tar.gz dist/
+          # release files
+          rm dist/index.html
+          echo "/////////////////// dist  list ///////////////////"
+          ls -Alh dist
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
@@ -76,8 +81,7 @@ jobs:
           mkdir -p release
           cp -f artifacts/binaries-ubuntu-latest/* release/ || true
           cd release          
-          echo "$(date +'%Y-%m-%dT%H:%M:%S%z')" > version.txt
-          echo "文件列表:"
+          echo "文件发布列表:"
           ls -la
 
       - name: Delete existing latest tag
