--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -10,6 +10,8 @@ on:
 env:
   GHCR_REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  REPO_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
+
 
 jobs:
   push_to_registry:
@@ -56,7 +58,7 @@ jobs:
           platforms: linux/amd64
           tags: |
             ${{ env.GHCR_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-            ${{ secrets.DOCKER_HUB_USERNAME }}/${{ github.event.repository.name }}:latest
+            ${{ env.REPO_USERNAME }}/${{ env.IMAGE_NAME }}:latest
           build-args: |
             GIT_COMMIT=${{ github.sha }}
             GIT_TAG=${{ github.ref_name }}
@@ -67,7 +69,7 @@ jobs:
           echo -e "=== Build Finished ===\n\
           Usage:\n\
           docker pull ${{ env.GHCR_REGISTRY }}/${{ env.IMAGE_NAME }}:latest\n\
-          docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ github.event.repository.name }}:latest"
+          docker pull ${{ env.REPO_USERNAME }}/${{ env.IMAGE_NAME }}:latest"
 
       #- name: send Message To me
       #  run: |
