--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -3,10 +3,9 @@ name: Build and Release
 on:
   push:
     branches: [ "main" ]
-    tags: [ 'v*.*.*' ]
+    #tags: [ 'v*.*.*' ]
     paths:
       - 'dist/**'
-      - '.github/workflows/build-release.yml'
   workflow_dispatch:
 
 jobs:
