--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -16,6 +16,8 @@ jobs:
   push_to_registry:
     name: Push Docker image to registries
     runs-on: ubuntu-latest
+    if: github.event_name == 'push' && (startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main')
+    
     permissions:
       contents: read
       packages: write
