--- a/.github/workflows/docker-latest.yml
+++ b/.github/workflows/docker-latest.yml
@@ -9,7 +9,12 @@ on:
 
 env:
   GHCR_REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  DHUB_REGISTRY: docker.io
+  # owner/repo eg. hahabye/vps_jsq
+  IMAGE_NAME_ALL: ${{ github.repository }}
+  # repo, eg. vps_jsq
+  IMAGE_NAME: ${{ github.event.repository.name }}
+  # eg. hahabye
   REPO_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
 
 jobs:
@@ -17,7 +22,7 @@ jobs:
     name: Push Docker image to registries
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && (startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main')
-    
+
     permissions:
       contents: read
       packages: write
@@ -27,16 +32,16 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         id: buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Available platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
 
-      - name: Login to ghcr.io
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ${{ env.GHCR_REGISTRY }}
@@ -46,6 +51,7 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
+          registry: ${{ env.DHUB_REGISTRY }}
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
@@ -58,8 +64,8 @@ jobs:
           #platforms: linux/amd64,linux/arm64
           platforms: linux/amd64
           tags: |
-            ${{ env.GHCR_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-            ${{ env.REPO_USERNAME }}/${{ github.event.repository.name }}:latest
+            ${{ env.GHCR_REGISTRY }}/${{ env.REPO_USERNAME }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REPO_USERNAME }}/${{ env.IMAGE_NAME }}:latest
           build-args: |
             GIT_COMMIT=${{ github.sha }}
             GIT_TAG=${{ github.ref_name }}
@@ -69,8 +75,8 @@ jobs:
         run: |
           echo -e "=== Build Finished ===\n\
           Usage:\n\
-          docker pull ${{ env.GHCR_REGISTRY }}/${{ env.IMAGE_NAME }}:latest\n\
-          docker pull ${{ env.REPO_USERNAME }}/${{ github.event.repository.name }}:latest"
+          docker pull ${{ env.GHCR_REGISTRY }}/${{ env.REPO_USERNAME }}/${{ env.IMAGE_NAME }}:latest\n\
+          docker pull ${{ env.REPO_USERNAME }}/${{ env.IMAGE_NAME }}:latest"
 
       #- name: send Message To me
       #  run: |
