--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -9,6 +9,86 @@ on:
   workflow_dispatch:
 
 jobs:
+
+  check:
+    runs-on: ubuntu-latest
+    outputs:
+      bui: ${{ steps.tag.outputs.build }}
+      tag: ${{ steps.tag.outputs.tag }}
+      ver: ${{ steps.tag.outputs.ver }}
+
+    steps:
+    - name: Log workflow trigger time
+      run: |
+        echo "Workflow triggered at $(date -u)"
+        echo "Event name: $GITHUB_EVENT_NAME"
+        echo "Actor: $GITHUB_ACTOR"
+    
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    
+    - id: latest
+      name: Get latest app version
+      run: |
+        # 获取最新版本号
+        LATEST_TAG=$(curl -s https://api.github.com/repos/hahabye/vps_jsq/releases/latest | jq -r .tag_name)
+        echo "tag=$LATEST_TAG" >> $GITHUB_OUTPUT
+        echo "Fetched latest app version: $LATEST_TAG"
+    
+    - id: current
+      name: Get latest tags version
+      run: |
+        # 获取当前仓库的最新标签
+        if git tag | grep -q .; then
+          CURRENT_TAG=$(git tag | sort -V | tail -n1)
+          echo "tag=$CURRENT_TAG" >> $GITHUB_OUTPUT
+          echo "Current repository tag: $CURRENT_TAG"
+        else
+          echo "tag=none" >> $GITHUB_OUTPUT
+          echo "No existing tags found in repository"
+        fi
+    
+    - id: tag
+      name: Compare and create tag
+      run: |
+        latest="${{ steps.latest.outputs.tag }}"
+        current="${{ steps.current.outputs.tag }}"
+        echo "Latest version: $latest"
+        echo "Current version: $current"
+        
+        # 检查是否需要创建新标签
+        if [ "$latest" != "$current" ]; then
+          if ! git ls-remote --tags origin | grep -q "refs/tags/$latest"; then
+            echo "Creating new tag: $latest"
+            git config user.name github-actions
+            git config user.email github-actions@users.noreply.github.com
+            git tag "$latest"
+            git push origin "$latest"
+            echo "Successfully pushed new tag: $latest"
+          else
+            echo "Tag $latest already exists, skipping creation"
+          fi
+          echo "tag=$latest" >> $GITHUB_OUTPUT
+          echo "ver=${latest#v}" >> $GITHUB_OUTPUT
+          echo "build=true" >> $GITHUB_OUTPUT
+          echo "Build flag set to TRUE - build will proceed"
+        else
+          echo "Same version detected: $latest = $current"
+          echo "build=false" >> $GITHUB_OUTPUT
+          echo "Build flag set to FALSE - build will be skipped"
+        fi
+    
+    - name: Summary of check task
+      run: |
+        echo "=============== CHECK TASK SUMMARY ==============="
+        echo "Timestamp: $(date -u)"
+        echo "Latest app version: ${{ steps.latest.outputs.tag }}"
+        echo "Current repo version: ${{ steps.current.outputs.tag }}"
+        echo "Build required: ${{ steps.tag.outputs.build }}"
+        echo "=================================================="
+
+
   build:
     strategy:
       fail-fast: false
